--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 
     <!-- Specific Meta
     ================================================== -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="keyword" content="">
-    <meta name="description" content="One of the leading family-owned conglomerates in the Middle East region for more than 65 years, with a business enterprise built around traditional family values and an uncompromising commitment to integrity, premium service and social responsibility.">
-    <meta name="author" content="Alfardan,Alfardan Group,Alfardan Jewellery,Alfardan Property,Alfardan Hospitality,Alfardan Medical,Alfardan Automotive,Alfardan Marine,Alfardan Exchange,Alfardan Investment,Safwa Qatar,Wahat Al Shafalahia,Tariqi">
-    <meta name="rights" content="">
+    <meta name="viewport" 
+        content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+    <meta name="keyword" 
+        content="Alfardan,Alfardan Group,Alfardan Jewellery,Alfardan Property,Alfardan Hospitality,Alfardan Medical,Alfardan Automotive,Alfardan Marine,Alfardan Exchange,Alfardan Investment,Safwa Qatar,Wahat Al Shafalahia,Tariqi">
+
+    <meta name="description" 
+        content="One of the leading family-owned conglomerates in the Middle East region for more than 65 years, with a business enterprise built around traditional family values and an uncompromising commitment to integrity, premium service and social responsibility.">
+
+    <meta name="author" 
+        content="Alfardan Group">
+
+    <meta name="rights" 
+        content="Alfardan Group">
 
     <!-- Site Title
     ================================================== -->
@@ -39,7 +48,7 @@
     Preloader Start
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
     <div class="preloader">
-        
+        <img src="assets/img/alfardan-logo.png" alt="Alfardan Group">
     </div>
     <!--~~./ Preloader End ~~-->
 
@@ -52,7 +61,7 @@
         <div class="container">
             <nav class="nav align-items-center">
                 <div class="start-block">
-                    <ul class="d-flex align-items-center">
+                    <ul class="">
                         <li>
                             <a href="#">
                                 <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,12 +79,12 @@
                 <div class="end-block ms-auto">
                     <ul class="d-flex">
                         <li>
-                            <a href="#">
+                            <a href="#" class="circle-border">
                                 <i class="fal fa-search"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class="circle-border">
                                 <i class="fal fa-share-alt"></i>
                             </a>
                         </li>
@@ -85,7 +94,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class="circle-border">
 
                             </a>
                         </li>
@@ -204,25 +213,32 @@
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
     <div class="ceo_message">
         <div class="container">
-            <div class="col-md-6">
-                <div class="text-content">
-                    <div class="title">
-                        A Message From The President & CEO Omar Hussain Alfardan
-                    </div>
-                    <p>
-                        Our founder and Chairman, Hussain Ibrahim Alfardan, has built  Alfardan Group on the values of trust, distinction, and a dedication  to service excellence. His deep-rooted integrity has always been his  currency, which created a bond of dedication and distinction that can be found in each and every Alfardan business interaction.
-                    </p>
-                    <p>
-                        As such, our corporate mission is to maintain and enhance our exceptional standards; inspired and motivated by our family values and corporate culture.
-                    </p>
-                    <p>
-                        Alfardan Group is fully committed to deliver products and services that satisfy market demands and exceed client expectations. Driven by a passion for quality and excellence, and guided by its core corporate values, Alfardan Group will continue to lead the way as the most dynamic and successful family-owned business conglomerate in Qatar and in the region. With the company's strong values revolving around passion, mastery, evolution, trust, and distinction; the Group will surely continue its journey to success.
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="image-content">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="text-content">
+                        <div class="title">
+                            A Message From The President & CEO <strong>Omar Hussain Alfardan</strong>
+                        </div>
+                        <p>
+                            Our founder and Chairman, Hussain Ibrahim Alfardan, has built <b>Alfardan Group</b> on the values of trust, distinction, and a dedication  to service excellence. His deep-rooted integrity has always been his  currency, which created a bond of dedication and distinction that can be found in each and every Alfardan business interaction.
+                        </p>
+                        <p>
+                            As such, our corporate mission is to maintain and enhance our exceptional standards; inspired and motivated by our family values and corporate culture.
+                        </p>
+                        <p>
+                            <b>Alfardan Group</b> is fully committed to deliver products and services that satisfy market demands and exceed client expectations. Driven by a passion for quality and excellence, and guided by its core corporate values, <b>Alfardan Group</b> will continue to lead the way as the most dynamic and successful family-owned business conglomerate in Qatar and in the region. With the company's strong values revolving around passion, mastery, evolution, trust, and distinction; the Group will surely continue its journey to success.
+                        </p>
 
+                        <p>
+                            <a href="#" class="btn-theme">
+                                READ MORE
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="image-content" style="background-image: url('assets/img/ceo.jpg');">
+                    </div>
                 </div>
             </div>
         </div>
@@ -322,11 +338,13 @@
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
     <div class="evolution">
         <div class="container">
-            <div class="title">
-                The Evolution of <strong>Alfardan</strong> Businesses
-            </div>
-            <div class="description">
-                Throughout its auspicious history of more than 65 years, Alfardan Group has successfully evolved from a pearl trading enterprise in the Arabian Gulf, into one of the leading regional conglomerates operating in a wide range of industries and sectors.
+            <div class="section-title">
+                <div class="title">
+                    The Evolution of <br> <strong>Alfardan</strong> Businesses
+                </div>
+                <div class="description">
+                    Throughout its auspicious history of more than 65 years, Alfardan Group has successfully evolved from a pearl trading enterprise in the Arabian Gulf, into one of the leading regional conglomerates operating in a wide range of industries and sectors.
+                </div>
             </div>
 
             <div class="swiper">
