--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
     <div class="ceo_message">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 order-lg-last">
+                <div class="col-lg-6 col-xl-7 order-lg-last">
                     <div class="image-content" style="background-image: url('assets/img/ceo.jpg');">
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-xl-5">
                     <div class="text-content">
                         <div class="title">
                             A Message From The President & CEO <strong>Omar Hussain Alfardan</strong>
