--- a/index.html
+++ b/index.html
@@ -482,6 +482,11 @@
             </div>
 
             <div class="swiper">
+                <div class="nav_btn button-prev">
+                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M22.4487 44.8281C21.4722 45.8044 19.8895 45.8044 18.913 44.8281L2.30189 28.217C-0.626211 25.2888 -0.627111 20.5418 2.29989 17.6125L18.7257 1.17402C19.702 0.197526 21.285 0.197526 22.2612 1.17402C23.2375 2.15027 23.2375 3.73327 22.2612 4.70952L5.83109 21.1395C4.85479 22.116 4.85479 23.6988 5.83109 24.675L22.4487 41.2926C23.425 42.2689 23.425 43.8518 22.4487 44.8281Z" fill="#C7C9C7"/>
+                    </svg>
+                </div>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="evolution-item text-center">
@@ -627,6 +632,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="nav_btn button-next">
+                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1.55127 44.8281C2.52777 45.8044 4.11052 45.8044 5.08702 44.8281L21.6981 28.217C24.6262 25.2888 24.6271 20.5418 21.7001 17.6125L5.27427 1.17401C4.29802 0.197512 2.71502 0.197512 1.73877 1.17401C0.762522 2.15026 0.762522 3.73326 1.73877 4.70951L18.1689 21.1395C19.1452 22.116 19.1452 23.6988 18.1689 24.675L1.55127 41.2926C0.575016 42.2689 0.575016 43.8518 1.55127 44.8281Z" fill="#d9d9d9"/>
+                    </svg>
                 </div>
             </div>
         </div>
@@ -1384,6 +1394,11 @@
         </div>
         <div class="container-fluid px-lg-0">
             <div class="blog-slider swiper">
+                <div class="nav_btn button-prev">
+                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17.7469 28.35L28.3519 17.7374C29.085 17.0062 30.2719 17.0062 31.0031 17.7374C31.7363 18.4687 31.7363 19.6688 31.0031 20.4L23.2763 28.125L43.125 28.125C44.1619 28.125 45 28.9687 45 30C45 31.0312 44.1619 31.875 43.125 31.875L23.2763 31.875L31.0031 39.6C31.7363 40.3312 31.7363 41.5126 31.0031 42.2626C30.2719 42.9938 29.085 42.9938 28.3519 42.2626L17.7469 31.65C17.2969 31.2 17.1562 30.5812 17.2594 30C17.1562 29.4187 17.2969 28.8 17.7469 28.35ZM30 60C46.5694 60 60 46.575 60 30C60 13.425 46.5694 -1.17414e-06 30 -2.62268e-06C13.4306 -4.07122e-06 4.07172e-06 13.425 2.62268e-06 30C1.17365e-06 46.575 13.4306 60 30 60Z" fill="#98989A"/>
+                    </svg>
+                </div>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="blog-item">
@@ -1489,6 +1504,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="nav_btn button-next">
+                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M42.2531 31.65L31.6481 42.2626C30.915 42.9938 29.7281 42.9938 28.9969 42.2626C28.2637 41.5313 28.2637 40.3312 28.9969 39.6L36.7237 31.875H16.875C15.8381 31.875 15 31.0312 15 30C15 28.9688 15.8381 28.125 16.875 28.125H36.7237L28.9969 20.4C28.2637 19.6688 28.2637 18.4874 28.9969 17.7374C29.7281 17.0062 30.915 17.0062 31.6481 17.7374L42.2531 28.35C42.7031 28.8 42.8438 29.4188 42.7407 30C42.8438 30.5812 42.7031 31.2 42.2531 31.65ZM30 0C13.4306 0 0 13.425 0 30C0 46.575 13.4306 60 30 60C46.5694 60 60 46.575 60 30C60 13.425 46.5694 0 30 0Z" fill="#98989A"/>
+                    </svg>
                 </div>
             </div>
         </div>
