--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <!-- Specific Meta
     ================================================== -->
-    <meta name="viewport" 
-        content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
     <meta name="keyword" 
         content="Alfardan,Alfardan Group,Alfardan Jewellery,Alfardan Property,Alfardan Hospitality,Alfardan Medical,Alfardan Automotive,Alfardan Marine,Alfardan Exchange,Alfardan Investment,Safwa Qatar,Wahat Al Shafalahia,Tariqi">
@@ -18,11 +17,9 @@
     <meta name="description" 
         content="One of the leading family-owned conglomerates in the Middle East region for more than 65 years, with a business enterprise built around traditional family values and an uncompromising commitment to integrity, premium service and social responsibility.">
 
-    <meta name="author" 
-        content="Alfardan Group">
+    <meta name="author" content="Alfardan Group">
 
-    <meta name="rights" 
-        content="Alfardan Group">
+    <meta name="rights" content="Alfardan Group">
 
     <!-- Site Title
     ================================================== -->
@@ -126,16 +123,16 @@
                             </h6>
                             <ul class="menu-list">
                                 <li>
-                                    <a href="#">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">About Us</a>
+                                    <a href="about.html">About Us</a>
                                 </li>
                                 <li>
                                     <a href="#">Tariqi</a>
                                 </li>
                                 <li>
-                                    <a href="#">News</a>
+                                    <a href="news.html">News</a>
                                 </li>
                                 <li>
                                     <a href="#">Careers</a>
@@ -144,7 +141,7 @@
                                     <a href="#">ESG Strategy</a>
                                 </li>
                                 <li>
-                                    <a href="#">Contact Us</a>
+                                    <a href="contact.html">Contact Us</a>
                                 </li>
                                 <li>
                                     <a href="#">Tenders</a>
@@ -160,19 +157,19 @@
                             <h6 class="widget-title">ALFARDAN BUSINESSES</h6>
                             <ul class="menu-list">
                                 <li>
-                                    <a href="#">Jewellery</a>
+                                    <a href="jewellery.html">Jewellery</a>
                                 </li>
                                 <li>
-                                    <a href="#">Exchange</a>
+                                    <a href="exchange.html">Exchange</a>
                                 </li>
                                 <li>
-                                    <a href="#">Property & Hospitality</a>
+                                    <a href="property.html">Property & Hospitality</a>
                                 </li>
                                 <li>
-                                    <a href="#">Automotive</a>
+                                    <a href="automotive.html">Automotive</a>
                                 </li>
                                 <li>
-                                    <a href="#">Investment</a>
+                                    <a href="investment.html">Investment</a>
                                 </li>
                                 <li>
                                     <a href="#">Marine Services</a>
