--- a/about.html
+++ b/about.html
@@ -264,12 +264,12 @@
                 </div>
                 <div class="tab-pane fade historyEvolution_tab" role="tabpanel">
                     <h5 class="page-title">
-                        HISTORY & EVOLUTION
+                        About us: History & Evolution
                     </h5>
                 </div>
                 <div class="tab-pane fade esgs_csr_tab" role="tabpanel">
                     <h5 class="page-title">
-                        ESG STRATEGY & CSR
+                        About us: ESG Strategy & CSR
                     </h5>
                 </div>
             </div>
@@ -1071,10 +1071,222 @@
                     </div>
                 </div>
                 <div class="tab-pane fade pt-5 mt-5 historyEvolution_tab" role="tabpanel">
-                    e
+                    <h6 class="content_title">Hisotry of Evolution</h6>
+                    
                 </div>
                 <div class="tab-pane fade pt-5 mt-5 esgs_csr_tab" role="tabpanel">
-                   f
+                    <ul class="nav nav-tabs"  role="tablist">
+                        <li class="nav-item">
+                            <a href="#anchor_1" data-bs-toggle="tab">Our Approach</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#anchor_2" data-bs-toggle="tab">Our Journey</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#anchor_3" data-bs-toggle="tab">Message From Mr Omar Alfardan</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#anchor_4" data-bs-toggle="tab">Esg Strategy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#anchor_5" data-bs-toggle="tab">Commitments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#anchor_6" data-bs-toggle="tab">Sustainability Committee</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#anchor_7" data-bs-toggle="tab">Latest News & Highlights</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content my-5">
+                        <div class="tab-pane fade pt-5 mt-5 active show" id="anchor_1" role="tabpanel">
+                            <h6>Our Approach</h6>
+                            <p>Sustainability is becoming an integral element of Alfardan Group's business
+                                strategies and processes. This strategic integration paves the way for us to
+                                meet our promise to be an enabler of sustainability in a wide range of
+                                markets
+                                in Qatar and the region.
+                            </p>
+                        </div>
+                        <div class="tab-pane fade pt-5 mt-5" id="anchor_2" role="tabpanel">
+                            <h6>Our Journey</h6>
+
+                            <div class="evolutionSlider swiper">
+                                <div class="nav_btn button-prev">
+                                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M22.4487 44.8281C21.4722 45.8044 19.8895 45.8044 18.913 44.8281L2.30189 28.217C-0.626211 25.2888 -0.627111 20.5418 2.29989 17.6125L18.7257 1.17402C19.702 0.197526 21.285 0.197526 22.2612 1.17402C23.2375 2.15027 23.2375 3.73327 22.2612 4.70952L5.83109 21.1395C4.85479 22.116 4.85479 23.6988 5.83109 24.675L22.4487 41.2926C23.425 42.2689 23.425 43.8518 22.4487 44.8281Z" fill="#C7C9C7"/>
+                                    </svg>
+                                </div>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1954</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Jewellery
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1971</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> EXCHANGE
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1982</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Construction Development Company
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1990</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Group
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1992</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Jewellery <br> <small>Saudi Arabia</small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1993</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Properties
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1996</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Investment
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1996</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Automobiles
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1997</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Premier Motors
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1997</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Prestige Cars
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>1999</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Sports Cars
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>2003</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Rolls-Royce Motor Cars Doha
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>2003</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Arabian Agencies Co. (ARACO)
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>2004</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Al Arabia Heavy Equipment
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>2005</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Marine Services
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="evolution-item text-center">
+                                            <div class="dot"></div>
+                                            <p>2006</p>
+                                            <div class="content">
+                                                <strong>Alfardan</strong> <br> Motorcycles
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="nav_btn button-next">
+                                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.55127 44.8281C2.52777 45.8044 4.11052 45.8044 5.08702 44.8281L21.6981 28.217C24.6262 25.2888 24.6271 20.5418 21.7001 17.6125L5.27427 1.17401C4.29802 0.197512 2.71502 0.197512 1.73877 1.17401C0.762522 2.15026 0.762522 3.73326 1.73877 4.70951L18.1689 21.1395C19.1452 22.116 19.1452 23.6988 18.1689 24.675L1.55127 41.2926C0.575016 42.2689 0.575016 43.8518 1.55127 44.8281Z" fill="#d9d9d9"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade pt-5 mt-5" id="anchor_3" role="tabpanel">
+
+                        </div>
+                        <div class="tab-pane fade pt-5 mt-5" id="anchor_4" role="tabpanel">
+
+                        </div>
+                        <div class="tab-pane fade pt-5 mt-5" id="anchor_5" role="tabpanel">
+
+                        </div>
+                        <div class="tab-pane fade pt-5 mt-5" id="anchor_6" role="tabpanel">
+
+                        </div>
+                        <div class="tab-pane fade pt-5 mt-5" id="anchor_7" role="tabpanel">
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
