--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 </div>
             </div>
 
-            <div class="swiper">
+            <div class="evolutionSlider swiper">
                 <div class="nav_btn button-prev">
                     <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M22.4487 44.8281C21.4722 45.8044 19.8895 45.8044 18.913 44.8281L2.30189 28.217C-0.626211 25.2888 -0.627111 20.5418 2.29989 17.6125L18.7257 1.17402C19.702 0.197526 21.285 0.197526 22.2612 1.17402C23.2375 2.15027 23.2375 3.73327 22.2612 4.70952L5.83109 21.1395C4.85479 22.116 4.85479 23.6988 5.83109 24.675L22.4487 41.2926C23.425 42.2689 23.425 43.8518 22.4487 44.8281Z" fill="#C7C9C7"/>
