about page removed and contact page added

--- a/automotive.html
+++ b/automotive.html
@@ -237,6 +237,14 @@
 
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Start Page Banner
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <div class="page__banner" style="background-image: url(assets/img/automotive/pageBanner.png);">
+    </div>
+    <!--~~./ end Page Banner ~~-->
+
+
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Start Footer
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
     <footer>
