--- a/jewellery.html
+++ b/jewellery.html
@@ -237,6 +237,81 @@
 
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Start Page Banner
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <div class="page__banner" style="background-image: url(assets/img/jewelary/.png);">
+    </div>
+    <!--~~./ end Page Banner ~~-->
+
+
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Start Business Partner
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <div class="our-partners">
+        <div class="container">
+            <div class="section-title">
+                <div class="title">
+                    Our Partners
+                </div>
+            </div>
+            <div class="swiper">
+                <div class="swiper-wrapper align-items-center">
+                    <div class="swiper-slide">
+                        <div class="partner-item text-center">
+                            <a href="#">
+                                <img src="assets/img/partner/bmw.svg" alt="BMW">
+                            </a>
+                        </div>                       
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partner-item text-center">
+                            <a href="#">
+                                <img src="assets/img/partner/alfa-romeo.svg" alt="Alfa Romeo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partner-item text-center">
+                            <a href="#">
+                                <img src="assets/img/partner/brequet.svg" alt="Brequet">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partner-item text-center">
+                            <a href="#">
+                                <img src="assets/img/partner/st-regis.svg" alt="ST. Regis">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partner-item text-center">
+                            <a href="#">
+                                <img src="assets/img/partner/ferari.svg" alt="Ferari">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partner-item text-center">
+                            <a href="#">
+                                <img src="assets/img/partner/guerlain-spa-logo.png" alt="Guerlain Spa">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partner-item text-center">
+                            <a href="#">
+                                <img src="assets/img/partner/harry-winston.png" alt="Harry Winston">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--~~./ end Business Partner ~~-->
+
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Start Footer
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
     <footer>
